--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ gradle-app.setting
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+/.idea/vcs.xml
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
