Upgrade Gradle and all Frameworks to latest Refactored code a bit using streams

--- a/build.gradle
+++ b/build.gradle
@@ -2,46 +2,52 @@ allprojects {
     apply plugin: 'application'
     apply plugin: 'idea'
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = '11'
+    targetCompatibility = '11'
 
     repositories {
         mavenLocal()
         jcenter()
         mavenCentral()
+        google()
     }
 
     group 'de.fh_kiel'
-    version '1.0'
+    version '1.1'
 }
 
 subprojects {
     dependencies {
-        compile 'org.apache.commons:commons-lang3:3.+'
-        compile 'org.slf4j:slf4j-simple:1.7.+'
+        implementation 'org.apache.commons:commons-lang3:3.+'
+        implementation 'org.slf4j:slf4j-simple:1.7.+'
 
-        compile rootProject
+        implementation rootProject
 
-        testCompile 'junit:junit:4.+'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.4.+'
+        testImplementation 'org.hamcrest:hamcrest-all:1.3'
+
     }
 }
 
 project(':guice') {
     dependencies {
-        compile 'com.google.inject:guice:4.1.+'
+        implementation 'com.google.inject:guice:4.2.+'
     }
     mainClassName = "GuiceApplication"
 }
 
 project(':spring') {
     dependencies {
-        compile 'org.springframework:spring-context:4.3.7.RELEASE'
+        implementation 'org.springframework:spring-context:5.1.6.RELEASE'
     }
     mainClassName = "SpringApplication"
 }
 
+test {
+    useJUnitPlatform()
+}
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '3.4.1'
-    distributionUrl = "http://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
+wrapper {
+    gradleVersion = '5.3.1'
+    distributionType = Wrapper.DistributionType.ALL
 }
