--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@
 hs_err_pid*
 ### Gradle template
 .gradle
-/build/
+/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -45,7 +45,8 @@ gradle-app.setting
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
-/.idea/vcs.xml
+.idea/vcs.xml
+.idea/.name
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
@@ -82,4 +83,3 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
-
